# tasawwur-rtc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLIC_RELEASE_GUIDE.md  README.md  RELEASE_ROADMAP.md  SECURITY.md  docker-compose.yml  h --force origin main
backend-services/rest-api-server/: pom.xml
backend-services/rest-api-server/src/main/java/com/tasawwur/rtc/api/: RestApiServerApplication.java
backend-services/rest-api-server/src/main/java/com/tasawwur/rtc/api/controller/: TokenController.java
backend-services/rest-api-server/src/main/resources/: application.yml
backend-services/signaling-server/: Dockerfile  pom.xml
backend-services/signaling-server/src/main/java/com/tasawwur/rtc/signaling/: SignalingServerApplication.java
backend-services/signaling-server/src/main/resources/: application.yml
backend-services/signaling-server/src/test/java/com/tasawwur/rtc/signaling/: SignalingServerApplicationTest.java
dashboard-frontend/: package.json  tsconfig.json  vite.config.ts
dashboard-frontend/src/: App.tsx  main.tsx  theme.ts
dashboard-frontend/src/api/: authApi.ts  client.ts
dashboard-frontend/src/pages/dashboard/: DashboardPage.tsx
dashboard-frontend/src/store/: authStore.ts
docs/: docusaurus.config.js  package.json
docs/docs/: quick-start.md
infra-k8s/base/: configmap.yaml  namespace.yaml  postgres.yaml  redis.yaml  rest-api-server.yaml  signaling-server.yaml
sdk-android/: build.gradle.kts  gradle.properties  settings.gradle.kts
sdk-android/src/main/cpp/: CMakeLists.txt  jni_interface.cpp  media_manager.cpp  rtc_engine_impl.cpp  signaling_client.cpp  webrtc_wrapper.cpp
sdk-android/src/main/cpp/include/: rtc_engine_impl.h  webrtc_wrapper.h
sdk-android/src/main/cpp/utils/: json_helper.cpp  json_helper.h  logging.cpp  logging.h  thread_utils.cpp  thread_utils.h
sdk-android/src/main/kotlin/com/tasawwur/rtc/: HeliosRtcConfig.kt  HeliosRtcEngine.kt  HeliosRtcListener.kt  RtcError.kt  RtcStats.kt  TasawwurRtcConfig.kt  TasawwurRtcEngine.kt  TasawwurRtcListener.kt
sdk-android/src/test/kotlin/com/tasawwur/rtc/: HeliosRtcConfigTest.kt  HeliosRtcEngineTest.kt  TasawwurRtcConfigTest.kt  TasawwurRtcEngineTest.kt
(+13 files in other folders)
